https://github.com/craftercms/craftercms/issues/1795 - [studio-ui] long internal names bleed over tool tip #1795 - FireFox

--- a/static-assets/styles/temp.css
+++ b/static-assets/styles/temp.css
@@ -3471,7 +3471,11 @@ span.acn-page-deleted a, span.acn-page-deleted a:hover {
   white-space: nowrap; }
 
 .acn-tooltip .acn-name {
-  word-break: break-word; }
+  /* For Firefox */
+  white-space: pre-wrap;
+  word-break: break-all;
+  /* For Chrome and IE */
+  word-wrap: break-word; }
 
 #yui-gen0 {
   padding-bottom: 3px;
@@ -15244,3 +15248,5 @@ body.masked {
 #activeContentActions li > .navbar-text {
   margin-left: 0;
   margin-right: 10px; }
+
+/*# sourceMappingURL=temp.css.map */
